# kompreni

./: .gitignore  LICENSE  README.md  dune-project  kompreni.opam  kompreni.opam.locked
dev-tools.locks/ocamlformat/: lock.dune
dune.lock/: lock.dune  popper.pkg  ppx_deriving_popper.pkg  pringo.pkg
lib/: commutative_monoid.ml  commutative_semigroup.ml  dune  monoid.ml  semigroup.ml  semiring.ml
test/: dune  instances.ml  scaffolding.ml  test_ints.ml  test_kompreni.ml  test_min_plus.ml  test_monoid.ml  test_semigroup.ml
